vehicle type enum
